fixed simple form for student info

--- a/app/assets/stylesheets/mainstyle.css
+++ b/app/assets/stylesheets/mainstyle.css
@@ -385,6 +385,11 @@ background-color:#a8bcdf;
 padding-top:20px;
 }
 
+.profhead{
+background-color:#a8bcdf;
+padding-top:20px;
+}
+
 #profile .label1{
 width: 200px;
 }
