--- a/app/views/students/_general_info.html.erb
+++ b/app/views/students/_general_info.html.erb
@@ -74,7 +74,8 @@
    </br>
      <table>
     <tr>
-      <td id="profhead" colspan="1">Personal Family Information</td>
+      <td class="profhead" colspan="1">Personal Family Information</td>
+      <td class="profhead"></td>
       <!--<td id="profhead" colspan="2"><%= link_to 'Edit', edit_student_path(@student) %>-->
     </tr>
     <tr>
@@ -107,6 +108,7 @@
     <tr>
       <td id="profhead" colspan="1">Academic Performance & Study Habit</td>
       <!--<td id="profhead" colspan="2"><%= link_to 'Edit', edit_student_path(@student) %>-->
+      <td class="profhead"></td>
     </tr>
     <tr>
       <td class="label1">Good Subjects:</td>
@@ -161,6 +163,7 @@
     <tr>
       <td id="profhead" colspan="1">Activities In and Out of School</td>
       <!--<td id="profhead" colspan="2"><%= link_to 'Edit', edit_student_path(@student) %>-->
+      <td class="profhead"></td>
     </tr>
     <tr>
       <td class="label1">Special Talents or Skills:</td>
@@ -192,6 +195,7 @@
     <tr>
       <td id="profhead" colspan="1">Guidance Concerns</td>
       <!--<td id="profhead" colspan="2"><%= link_to 'Edit', edit_student_path(@student) %>-->
+      <td class="profhead"></td>
     </tr>
     <tr>
       <td class="label1">Additional Guidance Class Topics:</td>
